--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "command-line-args": "^3.0.5",
+    "csv": "^1.1.0",
     "node-uuid": "^1.4.7",
     "underscore": "^1.8.3"
   }
